# Aviator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
app/app/: asgi.py  settings.py  urls.py
app/chat/: admin.py  consumers.py  models.py  urls.py  views.py
app/chat/migrations/: 0001_initial.py  0002_delete_message.py  0003_initial.py  0004_room_alter_message_room.py  0005_alter_message_id_alter_room_id.py  0006_alter_message_id.py  0007_alter_message_room_delete_room.py  0008_room_alter_message_room.py  0009_alter_room_id.py  0010_alter_message_room.py  0011_alter_message_room.py  0012_room_url.py  0013_alter_room_url.py  0014_alter_message_id_alter_room_id.py
app/crediting_money/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
app/crediting_money/migrations/: 0001_initial.py  0002_google_href_phonepe_href_upi_href_and_more.py
app/templates/chat/: index.html  room.html
app/templates/payment/: index.html  secondform.html
app/templates/registration/: login.html
app/templates/temp_payment/: deposit.html
app/templates/withdrawal_money/: withdraw.html
app/urls_for_ticket/: admin.py  apps.py  models.py  urls.py  views.py
app/urls_for_ticket/migrations/: 0001_initial.py  0002_alter_tempacc_url.py  0003_alter_tempacc_url.py  0004_tempacc_clean_url.py
app/users/: admin.py  apps.py  models.py
app/users/migrations/: 0001_initial.py
app/withdrawal_money/: admin.py  apps.py  const.py  forms.py  models.py  urls.py  validators.py  views.py
nginx/: default.conf
(+8 files in other folders)
